# sphere

./: .gitignore  CMakeLists.txt  README.rst  conv-png.gp  conv-png.sh  conv.gp  conv.sh  demParticles.cpd  run_diagnostics.sh
doc/: Makefile
python/: adaptive-grid-shear-test.py  alejandro-init-cons.py  capillary-cohesion.py  capillary-cohesion.sh  capillary-cohesion2.py  channel-wet.py  channel.py  collapse.py  collision.py  consolidation-curve.py  consolidation-curves.py  consolidation-curves.sh  continue_sim.py  creep-master.py  cube-init.py  diffusivity-results.py  diffusivity-starter.py  diffusivity-test.py  diffusivity-test.sh  diffusivity.py  diffusivity.sh  diffusivity1.py  diffusivity2.py  diffusivity3.py  fluidshear.py  generate-consolidation-scripts-comet.py  generate-rate-state-scripts-comet-rs0.py  generate-rate-state-scripts-comet-rs1.py  generate-rate-state-scripts.py  halfshear-darcy-combined-orig.py  halfshear-darcy-combined.py  halfshear-darcy-creep-dynamics.py  halfshear-darcy-fft.py  (+64 more)
tests/: CMakeLists.txt  bond_tests.py  cfd_dem_tests.py  cfd_inclined.py  cfd_simple.py  cfd_tests.py  cfd_tests_darcy.py  cfd_tests_darcy_particles.py  cfd_tests_neumann-c=0.1.py  cfd_tests_neumann-c_a=0.0-c_v=0.1.py  cfd_tests_neumann-c_v=0.1.py  cfd_tests_neumann.py  cfd_tests_neumann_darcy.py  contactmodel.py  contactmodel_wall.py  contactmodel_wall_young.py  contactmodel_young.py  dem_cfd_tests.py  fluid_particle_interaction.py  fluid_particle_interaction_darcy.py  io_tests.py  io_tests_fluid.py  memcheck_tests.py  porosity_tests.py  pytestutils.py  stokes_law.py
(+44 files in other folders)
